# Cerberus

./: CMakeLists.txt
config/a1_config/: hardware_a1_vins_config.yaml
config/deepak_st_config/: a1_cerberus_rviz.rviz  a1_cerberus_test.yaml  go1_cerberus_rviz.rviz  go1_cerberus_test.yaml
config/rviz/: vilo_rviz_config.rviz
launch/dataset/: run_campus_bag_vins.launch  run_pbl_bag_vilo.launch  run_street_bag_vins.launch
launch/deepak_st_tests/: a1_cerberus_test.launch  go1_cerberus_test.launch
launch/hardware_a1/: hardware_a1_vilo.launch  hardware_a1_vins.launch
launch/hardware_go1/: hardware_go1_vins.launch
src/: joint_foot_pub.cpp
urdf/a1_description/: CMakeLists.txt  package.xml
urdf/a1_description/config/: joint_zeros.yaml
urdf/a1_description/meshes/: backpack_mesh.stl
urdf/a1_description/src/: cmd_vel_controller.py  odom_repub.py
urdf/a1_description/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  a1_const.xacro  a1_highlevel_robot.urdf.xacro  backpack_const_v1.xacro  backpack_const_v2.xacro  hokuyo_ust10.urdf.xacro  leg.xacro  leg_fixed.xacro
