<?xml version="1.0"?>
<package format="2">
  <name>a1_description</name>
  <version>1.2.6</version>
  <description>
    3D models and descriptions of Unitree A1 robot for simulation and visualization
  </description>

  <author email="dplozza@ethz.ch">dplozza</author>
  <maintainer email="dplozza@ethz.ch">dplozza</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>hector_sensors_description</exec_depend>
</package>
